--- a/src/app/Utes/prerevisionexamen/prerevisionexamen.component.html
+++ b/src/app/Utes/prerevisionexamen/prerevisionexamen.component.html
@@ -1,4 +1,4 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Revisión Previa</h2>
 <div class="widget-box widget-color-dark ui-sortable-handle hide" id="widget-box-11">
     <div class="widget-header">
         <button type="button" name="nuevo" (click)='openDialog()' class="btn btn-primary" title="Nuevo" *ngIf="habilitaBotonInscripcion">
@@ -23,7 +23,7 @@
         <tr *ngFor="let item of listEstudiantesExamen; index as i">
             <td class="center" style="width: 30px;">{{i + 1}}</td>
             <td class="actions center" style="width: 100px">
-                <button type="button" name="editar" (click)='openDialog2(item.idPsl)' title="Validar Respuesta" [className]="habilitaBotonEditaPresolicitudExamen(item.pslIdEstado) ? 'btn btn-primary btn-xs disabled' : 'btn btn-primary btn-xs'">
+                <button type="button" name="editar" (click)='openDialogUtesPrerevision(item.idPsl)' title="Revisión previa de requisitos para resolución" [className]="habilitaBotonEditaPresolicitudExamen(item.pslIdEstado) ? 'btn btn-primary btn-xs disabled' : 'btn btn-primary btn-xs'">
                     <i class="fa fa-pencil-square-o"></i>
                 </button>
                 <button type="button" name="detalle" (click)='openDialog(item.idPsl)' class="btn btn-primary btn-xs" title="Detalle">
@@ -32,7 +32,7 @@
             </td>
             <td>{{item.persona.perApellido}} {{item.persona.perNombre}}</td>
             <td>{{item.inscripcion.insNombre}} - {{item.inscripcion.insPeriodo}}</td>
-            <td>{{item.nombreTipo}}</td>
+            <td>{{getNombreTipoPorLista(item.pslIdOpcion)}}</td>
             <td>{{item.pslObservacion}}</td>
             <td>{{item.nombreEstado}}</td>
         </tr>
@@ -45,5 +45,76 @@
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div>
+
+
+<div id="dialogUtesPrerevision">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="form-group row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name" style="width: 155px;">Mensaje estudiante:</div>
+                    <div class="profile-info-value"><span >{{presolicitud.pslMensaje}}</span></div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="profile-info-name" style="width: 155px;">Mensaje validación:</div>
+                    <div class="profile-info-value"><span >{{presolicitud.pslObservacion}}</span></div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="profile-info-name" style="width: 155px;">Estado:</div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <select class="form-control" name="miselect" disabled="disabled" [(ngModel)]="presolicitud.pslIdEstado">
+                            <option [value]="item.id" *ngFor="let item of listEstadoInscripcion">{{item.titulo}}</option>
+                        </select>
+                    </span></div>
+                </div>
+            </div>
+            <div style="clear: both;"></div>
+            <div class="col-sm-12">
+                <table class="table table-striped table-bordered tbl_chk font-small" style="width:100%; margin-bottom:0px;">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <th class="center" style="width: 30px;"></th>
+                            <th>Requisito</th>
+                            <th>Respuesta</th>
+                            <th>Validación</th>
+                            <th>Revisión previa</th>
+                            <th scope="col" class="fixed-side center">Revisión previa
+                                <input id="chk_all_row" class="chk_all_row" type="checkbox" value="">                                                                   
+                            </th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of listCuestionarioTodos; index as i">
+                            <td class="center" style="width: 30px;">{{i + 1}}</td>
+                            <td>{{item.cuePregunta}}</td>
+                            <td class="actions fixed-side center">
+                                <!-- <input name="chk_resValor_{{i}}" type="checkbox" [checked]="getRespuestaValor(item.idCue, presolicitud.idPsl)" disabled=true> -->
+                                <input name="chk_resValor_{{i}}" type="checkbox" [checked]="true" disabled=true>
+                            </td>
+                            <td class="actions fixed-side center">
+                                <input name="chk_resValidacion_{{i}}" type="checkbox" [checked]="true" disabled=true>
+                            </td>
+                            <td class="actions fixed-side center">
+                                <input name="chk_resPrerevision_{{i}}" type="checkbox" [checked]="false" disabled=true>
+                            </td>
+                            <td class="actions fixed-side center">
+                                <input name="chk_row_{{i}}" type="checkbox" value="{{item.idCue}}" (change)="onChange(item.idTem, $event.target.checked)">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>     
+            </div>
+            <div class="col-sm-10">
+                <div class="profile-info-name" style="width: 155px;">Observación:</div>
+                <div class="profile-info-value" ><span>
+                    <textarea class="form-control" name="pslPrerevision" [(ngModel)]='presolicitud.pslPrerevision' rows="6"></textarea>
+                </span></div>
+            </div>
+
+        </form>
+        
     </div>
 </div>
