--- a/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
+++ b/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
@@ -43,18 +43,18 @@
                                 </button>
                             </td>
                             <td class="actions center">
-                                <button type="button" name="detalle" (click)='openDialog(item)'  class="btn btn-primary btn-xs" title="Ver Detalle">
+                                <button type="button" name="detalle" (click)='dialogPeriodoDocente(item)'  class="btn btn-primary btn-xs" title="Ver Detalle">
                                     <i class="fa fa-search"></i>
                                 </button>
                             </td>
                             <td class="actions center">
-                                <button type="button" name="editar" (click)='openDialog(item)'  class="btn btn-primary btn-xs" title="Ver Evolución">
+                                <button type="button" name="editar" (click)='dialogPeriodoDocenteHora(item)'  class="btn btn-primary btn-xs" title="Ver Evolución">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </button>
                             </td>
                             <td>{{item.prdNumero}}</td>
-                            <td>{{item.prdFechaInicio}}</td>
-                            <td>{{item.prdFechaFin}}</td>
+                            <td>{{parseDateToString(item.prdFechaInicio)}}</td>
+                            <td>{{parseDateToString(item.prdFechaFin)}}</td>
                             <td>{{item.prdAnioInicio}}</td>
                             <td>{{item.prdAnioFin}}</td>
                             <td class="actions fixed-side center">
@@ -100,8 +100,8 @@
                             <td>{{item.conNombre}}</td>
                             <td>{{item.conNumeroTema}}</td>
                             <td>{{item.conPeriodo}}</td>
-                            <td>{{item.conFechaInicio}}</td>
-                            <td>{{item.conFechaFin}}</td>
+                            <td>{{parseDateToString(item.conFechaInicio)}}</td>
+                            <td>{{parseDateToString(item.conFechaFin)}}</td>
                             <td>{{item.conActivo}}</td>
                         </tr>
                     </tbody>
@@ -141,8 +141,8 @@
                             <td class="hide">{{item.idIns}}</td>
                             <td>{{item.insNombre}}</td>
                             <td>{{item.insPeriodo}}</td>
-                            <td>{{item.insFechaInicio}}</td>
-                            <td>{{item.insFechaFin}}</td>
+                            <td>{{parseDateToString(item.insFechaInicio)}}</td>
+                            <td>{{parseDateToString(item.insFechaFin)}}</td>
                             <td>{{item.insActivo}}</td>
                         </tr>
                     </tbody>
@@ -199,5 +199,148 @@
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div>
+
+
+<div id="dialogPeriodo">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Periodo: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="40" max="200" step="1" [(ngModel)]="periodo.prdNumero" [ngModelOptions]="{standalone: true}" [disabled]="periodo.idPrd ? true : false"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha inicial: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="periodo.prdFechaInicio | date:'yyyy-MM-dd'" (input)="periodo.prdFechaInicio = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha final: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="periodo.prdFechaFin | date:'yyyy-MM-dd'" (input)="periodo.prdFechaFin = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Año inicial: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="2014" max="2050" step="1" [(ngModel)]="periodo.prdAnioInicio" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Año final: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="2014" max="2050" step="1" [(ngModel)]="periodo.prdAnioFin" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Actiado: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input name="chk_prdActivo" type="checkbox" [checked]="periodo.prdActivo" [(ngModel)]="periodo.prdActivo">                                                                   
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="periodo.idPrd">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='createPeriodo()' *ngIf="!periodo.idPrd else elseBlock">
+                        <i class="fa fa-save"></i> CREAR
+                    </button>
+                    <ng-template #elseBlock>
+                        <button class="btn btn-primary" role="button" (click)='updatePeriodo()'>
+                            <i class="fa fa-save"></i> EDITAR
+                        </button>
+                    </ng-template>
+                </div>
+            </div>
+        </form>        
+    </div>
+</div>
+
+
+<div id="dialogPeriodoDocente">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
+                <thead class="thead-inverse">
+                    <tr>
+                        <th class="center" style="width: 30px;"></th>
+                        <th>Cédula</th>
+                        <th>Apellido</th>
+                        <th>Nombre</th>
+                        <th>Correo</th>
+                        <th>Perfil</th>
+                        <th>Activo</th>
+                        <th>Selección</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of listUsuarioDocente; index as i">
+                        <td class="center" style="width: 30px;">{{i + 1}}</td>
+                        <td>{{item.persona.perCedula}}</td>
+                        <td>{{item.persona.perApellido}}</td>
+                        <td>{{item.persona.perNombre}}</td>
+                        <td>{{item.usrCorreo}}</td>
+                        <td>{{item.sysPerfil.prfNombre}}</td>
+                        <td class="actions fixed-side center">
+                            <input name="chk_usrActivo_{{i}}" type="checkbox" [checked]="item.usrActivo" disabled=true>                                                                   
+                        </td>
+                        <td>{{item.usrClave}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
+    </div>
+</div>
+
+
+<div id="dialogPeriodoDocenteHora">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
+                <thead class="thead-inverse">
+                    <tr>
+                        <th class="center" style="width: 30px;"></th>
+                        <th>Cédula</th>
+                        <th>Apellido</th>
+                        <th>Nombre</th>
+                        <th>Sexo</th>
+                        <th>Horas Asignada</th>
+                        <th>Horas Vigente</th>
+                        <th>Horas Lecturaa</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of listSeleccion; index as i">
+                        <td class="center" style="width: 30px;">{{i + 1}}</td>
+                        <td>{{item.persona.perCedula}}</td>
+                        <td>{{item.persona.perApellido}}</td>
+                        <td>{{item.persona.perNombre}}</td>
+                        <td>{{item.persona.perSexo}}</td>
+                        <td>{{item.selHoraAsignada}}</td>
+                        <td>{{item.selHoraVigente}}</td>
+                        <td>{{item.selHoraLectura}}</td>
+                        <!-- <td class="actions fixed-side center">
+                            <input name="chk_usrActivo_{{i}}" type="checkbox" [checked]="item.usrActivo" disabled=true>                                                                   
+                        </td> -->
+                    </tr>
+                </tbody>
+            </table>
+        </form>
     </div>
 </div>
