--- a/src/app/Utes/utesresolucion/utesresoluciondesarrollo.component.html
+++ b/src/app/Utes/utesresolucion/utesresoluciondesarrollo.component.html
@@ -1,10 +1,9 @@
-<h2 class="header header-efx">{{titulo}}</h2>
+<h2 class="header header-efx">Listado de Resoluciones</h2>
 <div class="col-xs-12">
     <div class="row">
         <div class="col-sm-4">
             <div class="profile-info-name">Tipo :</div>
-            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{tema.nombreTipo}}</b></span>
-            </div>
+            <div class="profile-info-value" style="background-color: #b5d4fb;"><span><b>{{getNombreTipoPorLista(tema.temIdTipo)}}</b></span></div>
         </div>
     </div>
     <div class="row">
@@ -50,7 +49,7 @@
             </td>
             <td class="hide">{{item.idRsl}}</td>
             <td>{{item.rslNumero}}</td>
-            <td>{{item.rslFechaResolucion}}</td>
+            <td>{{parseDateToString(item.rslFechaResolucion)}}</td>
             <td>{{(item.tipoResolucion.trslTitulo)}}</td>
         </tr>
     </tbody>
@@ -65,11 +64,52 @@
 </div>
 
 
-<div id="dialogUtesResolucionNew">
+<div id="dialogUtesResolucion">
     <div>
         <div class="ad-banner-example">
             <ng-template ad-host></ng-template>
         </div>
+    </div>
+</div>
+
+<div id="dialogUtesResolucionNew">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="form-group row">
+                <label for="temIdTipo" class="col-sm-2 col-form-label">Tipo</label>
+                <div class="col-sm-10">
+                    <select class="form-control" name="miselect" [(ngModel)]="resolucionnew.idTipoResolucion">
+                        <option [value]="item.idTrsl" *ngFor="let item of listResolucionTipo">{{item.trslTitulo}}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="rslFechaResolucion" class="col-sm-2 col-form-label">Fecha Resolución</label>
+                <div class="col-sm-10">
+                        <input type="date" [value]="resolucionnew.rslFechaResolucion | date:'yyyy-MM-dd'" (input)="resolucionnew.rslFechaResolucion = parseDate2($event.target.value)" />
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="rslNumero" class="col-sm-2 col-form-label">rslNumero</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="rslNumero" [(ngModel)]="resolucionnew.rslNumero">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="rslObservacion" class="col-sm-2 col-form-label">Observación</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" name="rslObservacion" [(ngModel)]='resolucionnew.rslObservacion' rows="4"></textarea>
+                </div>
+            </div>    
+            <input type="hidden" value="" name="id" [(ngModel)]="resolucionnew.idRsl">
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='UteResolucionCreate()'>
+                        <i class="fa fa-save"></i> CREAR
+                    </button>
+                </div>
+            </div>
+        </form>        
     </div>
 </div>
 
