--- a/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
+++ b/src/app/Utes/utesconfiguracion/utesconfiguracion.component.html
@@ -14,7 +14,7 @@
         <div id="tab-mistemas" class="tab-pane">
             <div id="cont-tab-mistemas">
                 <div class="widget-header">
-                    <button type="button" name="datosTema" (click)='dialogCreatePeriodo()' class="btn btn-primary btn-xs" title="Crear Nuevo Periodo">
+                    <button type="button" name="datosTema" (click)='dialogCreatePeriodo()' class="btn btn-primary btn-xs" title="Registro de Periodo">
                         <i class="fa fa-pencil-square-o"></i> Nuevo Periodo
                     </button>
                 </div>
@@ -43,12 +43,12 @@
                                 </button>
                             </td>
                             <td class="actions center">
-                                <button type="button" name="detalle" (click)='dialogPeriodoDocente(item)'  class="btn btn-primary btn-xs" title="Ver Detalle">
-                                    <i class="fa fa-search"></i>
+                                <button type="button" name="detalle" (click)='dialogPeriodoDocente(item)'  class="btn btn-primary btn-xs" title="Añadir docentes al periodo">
+                                    <i class="fa fa-pencil-square-o"></i>
                                 </button>
                             </td>
                             <td class="actions center">
-                                <button type="button" name="editar" (click)='dialogPeriodoDocenteHora(item)'  class="btn btn-primary btn-xs" title="Ver Evolución">
+                                <button type="button" name="editar" (click)='dialogPeriodoDocenteHora(item)'  class="btn btn-primary btn-xs" title="Editar horas de docentes añadidos">
                                     <i class="fa fa-pencil-square-o"></i>
                                 </button>
                             </td>
@@ -92,8 +92,8 @@
                         <tr *ngFor="let item of listConvocatoria; index as i">
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="actions center" style="width: 100px">
-                                <button type="button" name="detalle" (click)='dialogEditConvocatoria(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
-                                    <i class="fa fa-search"></i>
+                                <button type="button" name="detalle" (click)='dialogEditConvocatoria(item)' class="btn btn-primary btn-xs" title="Modificar Registro">
+                                    <i class="fa fa-pencil-square-o"></i>
                                 </button>
                             </td>
                             <td>{{item.idCon}}</td>
@@ -102,7 +102,9 @@
                             <td>{{item.conPeriodo}}</td>
                             <td>{{parseDateToString(item.conFechaInicio)}}</td>
                             <td>{{parseDateToString(item.conFechaFin)}}</td>
-                            <td>{{item.conActivo}}</td>
+                            <td class="actions fixed-side center">
+                                <input name="chk_conActivo_{{i}}" type="checkbox" [checked]="item.conActivo" disabled=true>                                                                   
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -135,7 +137,7 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="actions center" style="width: 100px">
                                 <button type="button" name="detalle" (click)='dialogEditInscripcion(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
-                                    <i class="fa fa-search"></i>
+                                    <i class="fa fa-pencil-square-o"></i>
                                 </button>
                             </td>
                             <td class="hide">{{item.idIns}}</td>
@@ -143,7 +145,9 @@
                             <td>{{item.insPeriodo}}</td>
                             <td>{{parseDateToString(item.insFechaInicio)}}</td>
                             <td>{{parseDateToString(item.insFechaFin)}}</td>
-                            <td>{{item.insActivo}}</td>
+                            <td class="actions fixed-side center">
+                                <input name="chk_insActivo_{{i}}" type="checkbox" [checked]="item.insActivo" disabled=true>                                                                   
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -175,14 +179,16 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="actions center" style="width: 100px">
                                 <button type="button" name="detalle" (click)='dialogEditCuestionario(item)' class="btn btn-primary btn-xs" title="Ver Detalle">
-                                    <i class="fa fa-search"></i>
+                                    <i class="fa fa-pencil-square-o"></i>
                                 </button>
                             </td>
                             <td class="hide">{{item.idCue}}</td>
                             <td>{{item.cuePregunta}}</td>
                             <td>{{item.cueIdTipo}}</td>
                             <td>{{item.cueIdInscripcion}}</td>
-                            <td>{{item.cueActivo}}</td>
+                            <td class="actions fixed-side center">
+                                <input name="chk_cueActivo_{{i}}" type="checkbox" [checked]="item.cueActivo" disabled=true>                                                                   
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -276,10 +282,22 @@
 <div id="dialogPeriodoDocente">
     <div class="dialog-content" style="display: none;">
         <form>
-            <table class="table table-striped table-bordered font-small" style="width:100%; margin-bottom:0px;">
+            <div class="widget-header">
+                <button type="button" name="saveSeleccion" (click)='saveSeleccion()' class="btn btn-primary btn-xs" title="Seleccion de Docente">
+                    <i class="fa fa-pencil-square-o"></i> Seleccion
+                </button>
+                <button type="button" name="deleteSeleccion" (click)='deleteSeleccion()' class="btn btn-primary btn-xs" title="Quitar Docente">
+                    <i class="fa fa-pencil-square-o"></i> Quitar Seleccion
+                </button>
+            </div>
+            <div style="clear: both;"></div>
+            <table class="table table-striped table-bordered font-small tbl_chk" style="width:100%; margin-bottom:0px;">
                 <thead class="thead-inverse">
                     <tr>
                         <th class="center" style="width: 30px;"></th>
+                        <th scope="col" class="fixed-side center">
+                            <input id="chk_all_row" class="chk_all_row" type="checkbox" value="">                                                                   
+                        </th>
                         <th>Cédula</th>
                         <th>Apellido</th>
                         <th>Nombre</th>
@@ -292,6 +310,9 @@
                 <tbody>
                     <tr *ngFor="let item of listUsuarioDocente; index as i">
                         <td class="center" style="width: 30px;">{{i + 1}}</td>
+                        <td class="actions fixed-side center">
+                            <input id="row_{{item.idUsr}}" name="chk_row" type="checkbox" value="{{item.idUsr}}" (change)="onChange(item, $event.target.checked)">
+                        </td>
                         <td>{{item.persona.perCedula}}</td>
                         <td>{{item.persona.perApellido}}</td>
                         <td>{{item.persona.perNombre}}</td>
@@ -341,6 +362,206 @@
                     </tr>
                 </tbody>
             </table>
+        </form>
+    </div>
+</div>
+
+
+<div id="dialogConvocatoria">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Nombre de convocatoria: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="text" class="form-control" name="nombre" [(ngModel)]="convocatoria.conNombre" [attr.disabled]="convocatoria.idCon || !convocatoria.idCon ? '' : null">
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Número mínimo de temas: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="number" min="0" max="20" step="1" [(ngModel)]="convocatoria.conNumeroTema" [ngModelOptions]="{standalone: true}"/>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Periodo: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <select class="form-control" name="miselect" [(ngModel)]="convocatoria.conPeriodo">
+                            <option [value]="item.idPrd" *ngFor="let item of listPeriodoActivo">{{item.prdNumero}}</option>
+                        </select>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha inicial: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="convocatoria.conFechaInicio | date:'yyyy-MM-dd'" (input)="convocatoria.conFechaInicio = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha final: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="convocatoria.conFechaFin | date:'yyyy-MM-dd'" (input)="convocatoria.conFechaFin = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Actiado: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input name="chk_prdActivo" type="checkbox" [checked]="convocatoria.conActivo" [(ngModel)]="convocatoria.prdActivo">                                                                   
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="conSecuencia" [(ngModel)]="convocatoria.conSecuencia">
+            <input type="hidden" value="" name="id" [(ngModel)]="convocatoria.idCon">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='saveConvocatoria()' *ngIf="!convocatoria.idCon else elseBlock">
+                        <i class="fa fa-save"></i> CREAR
+                    </button>
+                    <ng-template #elseBlock>
+                        <button class="btn btn-primary" role="button" (click)='update()'>
+                            <i class="fa fa-save"></i> EDITAR
+                        </button>
+                    </ng-template>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<div id="dialogInscripcion">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Código: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                            <input type="text" class="form-control" name="insNombre" [(ngModel)]="inscripcion.insNombre"
+                                disabled="disabled">
+                        </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Periodo: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                            <select class="form-control" name="miselect" [(ngModel)]="inscripcion.insPeriodo">
+                                <option [value]="item.idPrd" *ngFor="let item of listPeriodoActivo">{{item.prdNumero}}
+                                </option>
+                            </select>
+                        </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha inicial: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="inscripcion.insFechaInicio | date:'yyyy-MM-dd'" (input)="inscripcion.insFechaInicio = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Fecha final: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="date" [value]="inscripcion.insFechaFin | date:'yyyy-MM-dd'" (input)="inscripcion.insFechaFin = parseDate2($event.target.value)" />
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Activado: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                            <input name="chk_insActivo" type="checkbox" [checked]="inscripcion.insActivo"
+                                [(ngModel)]="inscripcion.insActivo">
+                        </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="insSecuencia" [(ngModel)]="inscripcion.insSecuencia">
+            <input type="hidden" value="" name="id" [(ngModel)]="inscripcion.idIns">
+            <br />
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='createInscripcion()'
+                        *ngIf="!inscripcion.idIns else elseBlock">
+                        <i class="fa fa-save"></i> CREAR
+                    </button>
+                    <ng-template #elseBlock>
+                        <button class="btn btn-primary" role="button" (click)='update()'>
+                            <i class="fa fa-save"></i> EDITAR
+                        </button>
+                    </ng-template>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+<div id="dialogCuestionario">
+    <div class="dialog-content" style="display: none;">
+        <form>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Pregunta: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input type="text" class="form-control" name="cuePregunta" [(ngModel)]="cuestionario.cuePregunta">
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Tipo: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <select class="form-control" name="miselect" [(ngModel)]="cuestionario.cueIdTipo">
+                            <option [value]="item.id" *ngFor="let item of listTipoRequisito">{{item.nombre}}</option>
+                        </select>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Inscripción: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <select class="form-control" name="miselect" [(ngModel)]="cuestionario.cueIdInscripcion">
+                            <option [value]="item.idIns" *ngFor="let item of listInscripcion">{{item.insNombre}}</option>
+                        </select>
+                    </span></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-10">
+                    <div class="profile-info-name">Activado: </div>
+                    <div class="profile-info-value" style="width: 80%;"><span>
+                        <input name="chk_insActivo" type="checkbox" [checked]="cuestionario.cueActivo" [(ngModel)]="cuestionario.cueActivo">                                                                   
+                    </span></div>
+                </div>
+            </div>
+            <input type="hidden" value="" name="id" [(ngModel)]="cuestionario.idCue">
+            <br/>
+            <div class="form-group row">
+                <div class="col-sm-12 center">
+                    <button class="btn btn-primary" role="button" (click)='create()' *ngIf="!cuestionario.idCue else elseBlock">
+                        <i class="fa fa-save"></i> CREAR
+                    </button>
+                    <ng-template #elseBlock>
+                        <button class="btn btn-primary" role="button" (click)='update()'>
+                            <i class="fa fa-save"></i> EDITAR
+                        </button>
+                    </ng-template>
+                </div>
+            </div>
         </form>
     </div>
 </div>
